--- a/app.json
+++ b/app.json
@@ -40,15 +40,15 @@
         },
         "LOG_CHANNEL": {
             "description": "Log channel username, without using '@'.",
-            "value": ""
+            "value": "MP_CompressLog"
         },
         "LOG_ID": {
             "description": "Log channel `ID` (Should be Public)",
-            "value": ""
+            "value": "-1001560009059"
         },
         "ACCESS_CHANNEL": {
             "description": "Private group id to spy users.(Should be public group)",
-            "value": ""
+            "value": "-768695309"
         },
         "MONGODB_URI": {
             "description": "Your mongodb url here.",
@@ -56,11 +56,11 @@
         },
         "FORCESUB": {
             "description": "Channel id to which u want user be force subcribed.(Should be public)",
-            "value": ""
+            "value": "-1001527493028"
         },
         "FORCESUB_UN": {
             "description": "Forcesub channel's username.",
-            "value": ""
+            "value": "MoviePlex_TG"
         },
         "BOT_UN": {
             "description": "Username of your bot.",
